--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ember-render-stack",
+  "version": "0.0.3",
   "description": "Render a stack to outlets",
-  "version": "0.0.2",
   "directories": {
     "doc": "doc",
-    "test": "test"
+    "test": "tests"
   },
   "scripts": {
     "start": "ember server",
@@ -15,26 +15,28 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "keywords": [
-    "ember-addon"
-  ],
-  "ember-addon": {
-    "configPath": "tests/dummy/config"
-  },
   "author": {
     "name": "Richard Livsey",
     "email": "richard@minutebase.com"
   },
   "license": "MIT",
   "devDependencies": {
-    "body-parser": "^1.2.0",
-    "broccoli-asset-rev": "0.0.17",
+    "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.0.42",
-    "ember-cli-ember-data": "0.1.0",
-    "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-qunit": "0.0.5",
+    "ember-cli": "0.1.5",
+    "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli-dependency-checker": "0.0.7",
+    "ember-cli-esnext": "0.1.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.1.2",
+    "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
+  },
+  "keywords": [
+    "ember-addon"
+  ],
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
   }
 }
